Metadata v2.3/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Field Description</description>
        <inlineHelpText>Lookup Field Help Text</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <required>true</required>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <description>Employee Bio</description>
        <inlineHelpText>Enter Employee&apos;s detailed description.</inlineHelpText>
        <label>Bio</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blog__c</fullName>
        <description>Employee Blog</description>
        <inlineHelpText>&quot;Enter the URL to employee&apos;s blog</inlineHelpText>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <description>Employee Commission</description>
        <inlineHelpText>Enter 0 for employees without commission</inlineHelpText>
        <label>Commission</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Location__c</fullName>
        <inlineHelpText>Geolocation Help Text</inlineHelpText>
        <label>Company Location3</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of birth</description>
        <inlineHelpText>Date Help Text</inlineHelpText>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <description>Date and time of joining</description>
        <inlineHelpText>Date and time for the first time employee punched</inlineHelpText>
        <label>Date of Joining</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Education_Details__c</fullName>
        <description>Employee Education Qualification Details</description>
        <inlineHelpText>&quot;Enter employee education qualifications</inlineHelpText>
        <label>Education Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Field Description</description>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Phone__c</fullName>
        <inlineHelpText>Phone Help Text</inlineHelpText>
        <label>Employee Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_email__c</fullName>
        <description>Email Field Description</description>
        <inlineHelpText>Email Help Text</inlineHelpText>
        <label>Employee email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_s_profile_description__c</fullName>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>Employee&apos;s profile description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldTest10__c</fullName>
        <description>Phone Field Description</description>
        <inlineHelpText>Phone Help Text</inlineHelpText>
        <label>FieldTest10</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FieldTest11__c</fullName>
        <description>Text Picklist Description</description>
        <inlineHelpText>Picklist Help Text</inlineHelpText>
        <label>FieldTest11</label>
        <picklist>
            <picklistValues>
                <fullName>pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pick2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieldTest12__c</fullName>
        <description>Text Multi Picklist Description</description>
        <inlineHelpText>Mutlipicklist Help Text</inlineHelpText>
        <label>FieldTest12</label>
        <picklist>
            <picklistValues>
                <fullName>pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pick2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsValid1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>IsValid1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValid2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>IsValid2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValid3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checbox Field Description</description>
        <inlineHelpText>Checkox Field Help Text</inlineHelpText>
        <label>IsValid3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee&apos;s Manager</description>
        <inlineHelpText>Reporting Manager</inlineHelpText>
        <label>Manager</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maritial Status</description>
        <inlineHelpText>Check if Married</inlineHelpText>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Phone Field Description</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MultiselectPicklistField__c</fullName>
        <description>Text Multi Picklist Description</description>
        <inlineHelpText>Mutlipicklist Help Text</inlineHelpText>
        <label>MultiselectPicklistField</label>
        <picklist>
            <picklistValues>
                <fullName>pick1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pick2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Employee Name as per official documents</description>
        <inlineHelpText>Text Field Help Text</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>Salary</description>
        <inlineHelpText>Currency Help Text</inlineHelpText>
        <label>Salary</label>
        <precision>12</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <description>Employee Skills</description>
        <inlineHelpText>Select Multiple Skills from the given list</inlineHelpText>
        <label>Skills</label>
        <picklist>
            <picklistValues>
                <fullName>C/C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <description>Long Text Area Description</description>
        <inlineHelpText>Testing Long Text Area Help Text</inlineHelpText>
        <label>Solution</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website_link__c</fullName>
        <description>Testing Url Field Description</description>
        <inlineHelpText>Testing Url Field Help Text</inlineHelpText>
        <label>Website link</label>
        <type>Url</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>